# escc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.ru.md  main.cpp
resources/: resources.qrc
resources/sources/am32/: eeprom.json  settings.json
resources/sources/blheli/: settings.json
resources/sources/blhelis/: eeprom.json  settings.json
resources/sources/bluejay/: eeprom.json  settings.json
resources/styles/: app.qss
scripts/: convert-translations-to-ts.mjs  convert-translations-to-ts.py
src/core/: FourWay.cpp  FourWay.hpp  Msp.cpp  Msp.hpp
src/hardware/: Arm.cpp  Arm.hpp  Hardware.cpp  Hardware.hpp  Mcu.cpp  Mcu.hpp  Silabs.cpp  Silabs.hpp
src/i18n/: LanguageManager.cpp  LanguageManager.hpp  escc_cs.ts  escc_de.ts  escc_en.ts  escc_es.ts  escc_fr.ts  escc_it.ts  escc_pl.ts  escc_ru.ts  escc_tr.ts  escc_uk.ts  escc_zh_cn.ts  escc_zh_tw.ts
src/models/: AppState.cpp  AppState.hpp  EscListModel.cpp  EscListModel.hpp  SettingsModel.cpp  SettingsModel.hpp  Types.hpp
src/network/: HttpClient.cpp  HttpClient.hpp
src/serial/: QueueProcessor.cpp  QueueProcessor.hpp  Serial.cpp  Serial.hpp  SerialPort.cpp  SerialPort.hpp
src/sources/: AM32Source.cpp  AM32Source.hpp  BLHeliAtmelSource.cpp  BLHeliAtmelSource.hpp  BLHeliSSource.cpp  BLHeliSSource.hpp  BLHeliSilabsSource.cpp  BLHeliSilabsSource.hpp  BLHeliSource.cpp  BLHeliSource.hpp  BluejaySource.cpp  BluejaySource.hpp  GithubSource.cpp  GithubSource.hpp  Source.cpp  Source.hpp  SourceDataLoader.cpp  SourceDataLoader.hpp
src/ui/: AppSettingsDialog.cpp  AppSettingsDialog.hpp  ButtonBarWidget.cpp  ButtonBarWidget.hpp  ChangelogDialog.cpp  ChangelogDialog.hpp  CommonSettingsWidget.cpp  CommonSettingsWidget.hpp  EscWidget.cpp  EscWidget.hpp  FirmwareSelectorDialog.cpp  FirmwareSelectorDialog.hpp  FlashWidget.cpp  FlashWidget.hpp  HomeWidget.cpp  HomeWidget.hpp  LogWidget.cpp  LogWidget.hpp  MainWindow.cpp  MainWindow.hpp  MelodyEditorWidget.cpp  MelodyEditorWidget.hpp  MotorControlWidget.cpp  MotorControlWidget.hpp  OverlayWidget.cpp  OverlayWidget.hpp  PortPickerWidget.cpp  PortPickerWidget.hpp  StatusBarWidget.cpp  StatusBarWidget.hpp
src/ui/Input/: Checkbox.cpp  Checkbox.hpp  Info.cpp  Info.hpp  LabeledSelect.cpp  LabeledSelect.hpp  Number.cpp  Number.hpp  Slider.cpp  Slider.hpp
src/utils/: Convert.cpp  Convert.hpp  Flash.cpp  Flash.hpp  FourWayHelper.cpp  FourWayHelper.hpp  General.cpp  General.hpp  Settings.cpp  Settings.hpp
tests/: CMakeLists.txt  test_am32_source.cpp  test_app_state.cpp  test_blheli_sources.cpp  test_bluejay_source.cpp  test_convert.cpp  test_esc_list_model.cpp  test_flash.cpp  test_fourway_constants.cpp  test_fourway_frame.cpp  test_fourway_helper.cpp  test_general.cpp  test_github_source.cpp  test_hardware_ops.cpp  test_http_client.cpp  test_mcu.cpp  test_models_types.cpp  test_msp.cpp  test_settings.cpp  test_settings_model.cpp  test_source.cpp  test_source_data_loader.cpp
